--- a/style_1.4.css
+++ b/style_1.4.css
@@ -14,11 +14,12 @@ body {
 }
 
 .fixed-container {
-    width: 320px;
+    max-width: 320px;
     height: 100%;
     padding: 18px 24px 32px;
     position: fixed;
     overflow-y: auto;
+    box-shadow: 0 16px 52px rgba(14, 24, 80, 0.30);
 }
 
 .header {
